; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_units.c_format_time_us.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_units.c_format_time_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@time_units_us = common dso_local global i32 0, align 4
@time_units_s = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @format_time_us(x86_fp80 %0) #0 {
  %2 = alloca x86_fp80, align 16
  %3 = alloca i32*, align 8
  store x86_fp80 %0, x86_fp80* %2, align 16
  store i32* @time_units_us, i32** %3, align 8
  %4 = load x86_fp80, x86_fp80* %2, align 16
  %5 = fcmp oge x86_fp80 %4, 0xK4012F424000000000000
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load x86_fp80, x86_fp80* %2, align 16
  %8 = fdiv x86_fp80 %7, 0xK4012F424000000000000
  store x86_fp80 %8, x86_fp80* %2, align 16
  store i32* @time_units_s, i32** %3, align 8
  br label %9

9:                                                ; preds = %6, %1
  %10 = load x86_fp80, x86_fp80* %2, align 16
  %11 = load i32*, i32** %3, align 8
  %12 = call i8* @format_units(x86_fp80 %10, i32* %11, i32 2)
  ret i8* %12
}

declare dso_local i8* @format_units(x86_fp80, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
